fixed footer spacing

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,6 +7,7 @@
   height: 60px;
   padding: 0px;
   flex-shrink: 0;
+  position:absolute
 
   p {
     margin: 30px 10px;
